--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,16 @@
             <artifactId>log4j-core</artifactId>
             <version>2.12.4</version>
         </dependency>
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-exporter-otlp</artifactId>
+            <version>1.30.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-semconv</artifactId>
+            <version>1.3.0-alpha</version>
+        </dependency>
     </dependencies>
 
 </project>
