--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -1,15 +1,24 @@
-version: '3.8'
-
 services:
   app:
     ports:
       - "8080:8080"
-    volumes:
-      - .:/app # Mount source code for live development
     environment:
       - JAVA_OPTS=-Xms512m -Xmx1024m
+      - HOST=0.0.0.0
+      - PORT=8080
+      - REDIS_BID_CACHE=redis://redis:6379
+    restart: unless-stopped
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
+    depends_on:
+      - redis
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
